--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,17 +25,17 @@
         android:textSize="18dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textView4"
+        app:layout_constraintEnd_toStartOf="@+id/txt_total"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_insertarTiempo"
         app:layout_constraintVertical_bias="0.283" />
 
     <TextView
-        android:id="@+id/textView4"
-        android:layout_width="35dp"
-        android:layout_height="32dp"
-        android:layout_marginEnd="128dp"
+        android:id="@+id/txt_total"
+        android:layout_width="51dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="116dp"
         android:gravity="center"
         android:text="0"
 
@@ -43,6 +43,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_insertarTiempo"
-        app:layout_constraintVertical_bias="0.281" />
+        app:layout_constraintVertical_bias="0.282" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
